third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/call_transfer_borrows_invalid.no-opt.exp

Diagnostics:
error: cannot move local `y` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/call_transfer_borrows_invalid.move:16:9
   │
14 │         let y_ref = &mut y;
   │                     ------ previous mutable local borrow
15 │         let r = take_imm_mut_give_mut(move x_ref, move y_ref);
   │                 --------------------------------------------- used by mutable call result
16 │         move y;
   │         ^^^^^^ moved here
17 │         *r = 1;
   │         ------ conflicting reference `r` used here

error: cannot move local `x` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/call_transfer_borrows_invalid.move:26:9
   │
23 │         let x_ref = &x;
   │                     -- previous local borrow
24 │         let y_ref = &mut y;
25 │         let r = take_imm_mut_give_imm(move x_ref, move y_ref);
   │                 --------------------------------------------- used by call result
26 │         move x;
   │         ^^^^^^ moved here
27 │         move y;
28 │         *r;
   │         -- conflicting reference `r` used here

error: cannot move local `y` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/call_transfer_borrows_invalid.move:27:9
   │
24 │         let y_ref = &mut y;
   │                     ------ previous mutable local borrow
25 │         let r = take_imm_mut_give_imm(move x_ref, move y_ref);
   │                 --------------------------------------------- used by call result
26 │         move x;
27 │         move y;
   │         ^^^^^^ moved here
28 │         *r;
   │         -- conflicting reference `r` used here
